[ADD] Font italica y Font bold

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <p>Header</p>
                 </div>
                 <div class="card-c-body txt-left">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos voluptatem earum perferendis laborum tenetur eveniet aperiam, impedit dolore excepturi in ea similique, accusamus animi sunt rerum! Non esse amet provident?</p>
+                    <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos voluptatem earum perferendis laborum tenetur eveniet aperiam, impedit dolore excepturi in ea similique, accusamus animi sunt rerum! Non esse amet provident?</p>
                 </div>
                 <div class="card-c-foot bg-default-gr">
                     <p>
@@ -218,6 +218,7 @@
                     </p>
                 </div>
             </div>
+
         </div>
     </div>
     
